--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,18 @@
 <html>
 	<head>
 		<title>Hello</title>
+		<link rel="stylesheet" type="text/css" href="defaultCSS">
 	</head>
 
 	<body>
-		<h1>Hello World!</h1>
+		<div style="text-align: center">
+		<h1>Welcome to Not IMDB!</h1>
+
+		<p>Please visit the following pages to find out more about our site!</p>
+
+		<br/>
+			<p><a href="single-movie.html">Single Movie Page</a></p>
+			<p><a href="movie-list.html">Movie List</a></p>
+		</div>
 	</body>
 </html>
