--- a/hello.html
+++ b/hello.html
@@ -11,8 +11,8 @@
 		<p>Please visit the following pages to find out more about our site!</p>
 
 		<br/>
-			<p><a href="single-movie.html">Single Movie Page</a></p>
-			<p><a href="movie-list.html">Movie List</a></p>
+			<p><a href="single-movie">Single Movie Page</a></p>
+			<p><a href="movie-list">Movie List</a></p>
 		</div>
 	</body>
 </html>
