--- a/single-movie.html
+++ b/single-movie.html
@@ -68,7 +68,7 @@
 		<h1>Inside Out</h1>
 		<div class="row">
 			<div class="col-md-4">
-				<img src="inside_out_poster.jpg">
+				<img src="img/inside_out_poster.jpg">
 			</div>
 			<div class="col-md-8">
 			<p>After young Riley is uprooted from her Midwest life and moved to San Francisco, her emotions - Joy, Fear, Anger, Disgust and Sadness - conflict on how best to navigate a new city, house, and school.</p>
