template for single movie

--- a/single-movie.html
+++ b/single-movie.html
@@ -66,6 +66,16 @@
     
 	<div id="container">
 		<h1>Inside Out</h1>
+		
+		<h3>
+		<span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+		<span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+		<span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+		<span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+		<span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>
+		</h3>
+		
+		
 		<div class="row">
 			<div class="col-md-4">
 				<img src="img/inside_out_poster.jpg">
@@ -73,11 +83,10 @@
 			<div class="col-md-8">
 			<p>After young Riley is uprooted from her Midwest life and moved to San Francisco, her emotions - Joy, Fear, Anger, Disgust and Sadness - conflict on how best to navigate a new city, house, and school.</p>
 			<ul>
-				<li>Directed by</li>
-				<li>Starring</li>
-				<li>Released</li>
-				<li>Genre</li>
-				<li>Rating</li>
+				<li>Directed by Pete Docter and Ronnie Del Carmen</li>
+				<li>Starring Amy Poehler, Bill Hader, and Lewis Black</li>
+				<li>Released 19 June 2015</li>
+				<li>Genre: Animation, Adventure, Comedy</li>
 			</ul>
 			</div>
 		</div>
@@ -87,20 +96,20 @@
 			<ul class="commentList">
 				<li>
 					<div class="commentText">
-						<b>Name</b>
-						<p>Hello this is a test comment.</p> <span class="date sub-text">on March 5th, 2014</span>
+						<b>John Smith</b>
+						<p>Commenting is so much fun.</p> <span class="date sub-text">on October 27th, 2015</span>
 					</div>
 				</li>
 				<li>
 					<div class="commentText">
-						<b>Name</b>
-						<p>Hello this is a test comment and this comment is particularly very long and it goes on and on and on.</p> <span class="date sub-text">on March 5th, 2014</span>
+						<b>Ann Anderson</b>
+						<p>Hello look at how long this comment is. Wow! I have a lot to say about how fantastic this movie is. I wish I could keep talking forever. Disney movies are my favorite!</p> <span class="date sub-text">on October 5th, 2015</span>
 					</div>
 				</li>
 				<li>
 					<div class="commentText">
-						<b>Name</b>
-						<p>Hello this is a test comment.</p> <span class="date sub-text">on March 5th, 2014</span>
+						<b>Brandon White</b>
+						<p>I fell asleep during this movie.</p> <span class="date sub-text">on Septebmer 25th, 2015</span>
 					</div>
 				</li>
 			</ul>
