--- a/single-movie.html
+++ b/single-movie.html
@@ -31,13 +31,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Not IMDB</a>
+      <a class="navbar-brand" href="main-page.html">Not IMDB</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">Home</a></li>
+        <li><a href="main-page.html">Home</a></li>
         <li><a href="#">Request Movie Addition</a></li>
        
       </ul>
