--- a/main-page.html
+++ b/main-page.html
@@ -38,7 +38,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="main-page.html">Home</a></li>
-        <li><a href="#">Request Movie Addition</a></li>
+        <li><a href="request-page.html">Request Movie Addition</a></li>
        
       </ul>
       <form class="navbar-form navbar-right" role="search">
