login, sign-up, and request changes

--- a/sign-up.html
+++ b/sign-up.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Login</title>
+    <title>Sign Up</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -65,10 +65,14 @@
 	</nav>
     
 	<div id="container">
-	 <h1>Already a member? Login!</h1>
-   <p>Sign in to access your account</p>
+	 <h1>Welcome to Not IMDB!</h1>
+   <p>Although Not IMDB does not require an account to use, you may not have access to all features like commenting, requesting movies, and finding movies online. Fill out the information below to get started</p>
    <form>
-   <div class="form-group">
+    <div class="form-group">
+      <div class="form-group">
+        <label for="fullName">Full Name</label>
+        <input type="text" class="form-control" id="fullName" placeholder="Full Name">
+      </div>
       <div class="form-group">
         <label for="username">Username</label>
         <input type="text" class="form-control" id="username" placeholder="Username">
@@ -77,11 +81,15 @@
         <label for="password">Password</label>
         <input type="password" class="form-control" id="password" placeholder="Password">
       </div>
-  </div>
-</form>
-  <button type="submit" class="btn btn-default">Submit</button>
-  </br>
-    <h4>Not a member? <a href="sign-up.html">Sign up today!</a></h4> 
+      <div class="form-group">
+        <label for="passwordHint">Password Hint</label>
+        <input type="passwordHint" class="form-control" id="passwordHint" placeholder="Password Hint">
+      </div>
+    </div>
+    <button type="submit" class="btn btn-default">Submit</button>
+  </form>
+</br>
+  <h4>Already a member? <a href="login.html">Login here</a></h4>
 	</div>
 	
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
