--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		
 		<div class="row">
 			<div class="col-sm-6">
-				<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseFilter" aria-expanded="false" aria-controls="collapseExample">
+				<button class="btn btn-primary sort-filter-btn" type="button" data-toggle="collapse" data-target="#collapseFilter" aria-expanded="false" aria-controls="collapseExample">
 				  Filter by...
 				</button>
 				<div class="collapse" id="collapseFilter">
@@ -106,7 +106,7 @@
 			</div>
 			
 			<div class="col-sm-6">
-				<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseSort" aria-expanded="false" aria-controls="collapseExample">
+				<button class="btn btn-primary sort-filter-btn" type="button" data-toggle="collapse" data-target="#collapseSort" aria-expanded="false" aria-controls="collapseExample">
 				  Sort by...
 				</button>
 				<div class="collapse" id="collapseSort">
