--- a/page-template.html
+++ b/page-template.html
@@ -31,14 +31,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Not IMDB</a>
+      <a class="navbar-brand" href="index.html">Not IMDB</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Request Movie Addition</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="request.html">Request Movie Addition</a></li>
        
       </ul>
       <form class="navbar-form navbar-right" role="search">
@@ -48,7 +48,6 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account<span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -56,7 +55,7 @@
             <li><a href="#">Another action</a></li>
             <li><a href="#">Something else here</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Log Out</a></li>
+            <li><a href="sign-up.html">Sign up</a></li>
           </ul>
         </li>
       </ul>
@@ -65,7 +64,7 @@
 	</nav>
     
 	<div id="container">
-	
+
 	</div>
 	
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -74,3 +73,5 @@
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
+
+
