--- a/NotIMDB/index.html
+++ b/NotIMDB/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Not IMDB</title>
+    <title>Movie Template</title>
 
     <!-- Bootstrap -->
     <link href="vendor/assets/stylesheets/bootstrap.css" media="screen" rel="stylesheet">
